# DBP_main_course-Task-Manager

./: README.md  docker-compose.ci.yml
.github/workflows/: main.yml
TaskManager/: Dockerfile  docker-compose.yml  newrelic.ini  pyproject.toml
TaskManager/main/: admin.py  serializers.py  urls.py  views.py
TaskManager/main/migrations/: 0001_initial.py  0002_tag_task_user_role_alter_user_email_and_more.py  0003_alter_task_date_of_change_and_more.py  0004_task_author_task_executor_task_tags.py  0005_alter_task_tags.py  0006_alter_task_date_of_creation_alter_task_tags.py  0007_alter_task_date_of_change_and_more.py  0008_user_date_of_birth_user_phone.py  0009_user_avatar_picture.py
TaskManager/main/models/: __init__.py  task.py  user.py
TaskManager/main/services/: mail.py  single_resource.py  storage_backends.py
TaskManager/main/templates/emails/: base.html
TaskManager/task_manager/: celery.py  log_utils.py  settings.py  tasks.py  urls.py
TaskManager/test/: base.py  factories.py  test_countdown.py  test_current_user.py  test_send_email.py  test_simple_jwt.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
