[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp", "AndreyPanda"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-admin = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"