[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp", "AndreyPanda"]

[tool.poetry.dependencies]
python = "^3.9"

django-admin = "^2.0.2"
psycopg2-binary = "^2.9.5"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
markdown = "^3.4.3"
drf-yasg = "^1.21.5"
djangorestframework-simplejwt = "^5.2.2"
factory-boy = "^3.2.1"
faker = "^18.4.0"
freezegun = "^1.2.2"
coverage = "<7"
coveralls = "^3.3.1"
rollbar = "^0.16.3"
newrelic = "^8.8.0"
django-storages = "^1.13.2"
boto3 = "^1.26.131"
pillow = "^9.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"